fine tunnings, mail preference into settings

--- a/media/css/token-input.css
+++ b/media/css/token-input.css
@@ -3,17 +3,16 @@ ul.token-input-list {
     overflow: hidden;
     height: auto !important;
     height: 1%;
-    width: 140px;
-    border: 1px solid #999;
+    width: 263px;
+    background-color: #fff;
+    border:1px solid #999;
     cursor: text;
     font-size: 12px;
     font-family: Verdana;
     z-index: 999;
     margin: 0;
     padding: 0;
-    background-color: #fff;
     list-style-type: none;
-    clear: left;
 }
 
 ul.token-input-list li {
@@ -22,8 +21,8 @@ ul.token-input-list li {
 
 ul.token-input-list li input {
     border: 0;
-    width: 130px;
-    padding: 0;
+    width: 240px;
+    padding: 2px;
     background-color: white;
     -webkit-appearance: caret;
 }
@@ -32,13 +31,13 @@ li.token-input-token {
     overflow: hidden;
     height: auto !important;
     height: 1%;
-    margin: 3px;
     padding: 3px 5px;
     background-color: #d0efa0;
     color: #000;
     font-weight: bold;
     cursor: default;
     display: block;
+    border-bottom: 1px solid #999;
 }
 
 li.token-input-token p {
@@ -64,7 +63,7 @@ li.token-input-selected-token span {
 
 div.token-input-dropdown {
     position: absolute;
-    width: 130px;
+    width: 240px;
     background-color: #fff;
     overflow: hidden;
     border-left: 1px solid #ccc;
